--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
-		<body style="background-color:#ffdfe5;">
+		<body style="background-color:#ffffff;">
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
