--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration-color: blue;
-    color: #999;
+    /*color: #999;*/
 }
 a:hover {
     text-decoration-line: underline;
