--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,16 @@ a {
     color: #999;
 }
 a:hover {
-    text-decoration-color: transparent;
+    text-decoration-color: rgb(216, 216, 216);
 }
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-p {
+h2, h3 {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+p, ul, ol, table {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
