--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/sps">SPS</a></li>
-	        		<li><a href="/notes">Notes</a></li>
+					<li><a href="/notes">Notes</a></li>
+					<li><a href="/project">Project</a></li>
 	    		</ul>
 			</nav>
 
