--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 
 		<head>
 			<title>{{ page.title }}</title>
+			<link rel="apple-touch-icon" href="https://66.media.tumblr.com/43ed161dbcf1f1de23ab392e82c88c90/89b22f21ac1e4327-60/s128x128u_c1/bf8b4368aeef8b167aa35cca1a31b28b4e5f120c.jpg">
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
