--- a/css/main.css
+++ b/css/main.css
@@ -44,3 +44,549 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+/*style sheet from project\index.html*/
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+::-moz-selection { background: #0000aa; color:#ffffff; text-shadow: none; }
+::selection { background: #0000aa; color:#ffffff; text-shadow: none; }
+.background-cover {
+    background-position: center center;
+    background-size: cover;
+}
+.background-tile {
+    background-repeat: repeat;
+}
+.background-center {
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+body {
+    background-color: #c3c7cb;
+    
+    font-family: -apple-system, BlinkMacSystemFont, Arial, Helvetica, sans-serif;
+    width: 690px;
+    margin: 0 auto;
+}
+body.layout-two-column {
+    width: 1022px;
+}
+body.layout-three-column {
+    width: 1065px;
+}
+a, a:hover {
+    text-decoration: none;
+}
+main {
+    float: left;
+    width: 508px;
+    margin-top: 64px;
+    margin-bottom: 32px;
+}
+.layout-two-column main {
+    width: 882px;
+}
+.layout-three-column main {
+    width: 925px;
+}
+.sidebar {
+    position: fixed;
+    margin-left: 550px;
+    margin-top: 64px;
+    width: 136px;
+    font-size: 12px;
+}
+.layout-two-column .sidebar {
+    margin-left: 884px;
+}
+.layout-three-column .sidebar {
+    margin-left: 927px;
+}
+.sidebar-links {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 4px 0;
+}
+.button-border {
+    border: 2px solid black;
+    border-radius: 3px;
+    margin: 2px;
+}
+.sidebar-links li {
+    background-color: #C3C7CB;
+    color: black;
+    border: 2px solid white;
+    border-right-color: #868A8E;
+    border-bottom-color: #868A8E;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 0;
+    word-wrap: break-word;
+}
+.blog-description {
+    text-align: center;
+    padding: 10px;
+    font-size: 10px;
+    word-wrap: break-word;
+    color: #000000;
+}
+.blog-description a, .blog-description a:hover {
+    color: #000000;
+    text-decoration: underline;
+}
+.window-border {
+    margin-bottom: 48px;
+    margin-right: 48px;
+    width: 100%;
+    border: 1px solid black;
+    background-color: #c3c7cb;
+    background-image: url('//static.tumblr.com/anzluor/8zkp2ergb/win31grip2.png'), url('//static.tumblr.com/anzluor/8zkp2ergb/win31grip2.png'), url('//static.tumblr.com/anzluor/8zkp2ergb/win31grip2.png'), url('//static.tumblr.com/anzluor/8zkp2ergb/win31grip2.png');
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+    background-position: top left, top right, bottom left, bottom right;
+}
+main .window-border {
+    width: 508px;
+    float: left;
+}
+.layout-two-column main .window-border {
+    width: 408px;
+    margin-right: 32px;
+    margin-bottom: 32px;
+}
+.layout-three-column main .window-border {
+    width: 283px;
+    margin-right: 24px;
+    margin-bottom: 24px;
+}
+.window {
+    margin: 2px;
+    border: 1px solid black;
+}
+.sidebar .window {
+    background-color: #ffffff;
+}
+.title-bar {
+    background-color: #0000aa;
+    color: #ffffff;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: bold;
+    overflow-y: hidden;
+    cursor: default;
+    min-height: 18px;
+    text-align: center;
+}
+.title-bar-buttons {
+    float: right;
+    width: 38px;
+    height: 18px;
+    background-image: url('//static.tumblr.com/anzluor/dS6p2bs7t/w31.png');
+    background-repeat: no-repeat;
+    background-position: -19px 0;
+}
+.title-bar img {
+    margin-right: 2px;
+    vertical-align: middle;
+}
+.title-bar .icon {
+    width: 19px;
+    height: 18px;
+    background-image: url('//static.tumblr.com/anzluor/dS6p2bs7t/w31.png');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    float: left;
+}
+.sidebar .title-bar {
+    border-bottom: 1px solid black;
+    word-wrap: break-word;
+}
+.menu-bar {
+    background-color: #ffffff;
+    border-top: 1px solid black;
+    overflow: hidden;
+}
+.menu-items {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+}
+.menu-items li {
+    font-size: 12px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 0 8px;
+}
+.menu-items a {
+    color: #000000;
+    padding-bottom: 1px;
+}
+.menu-items a:hover {
+    background-color: #0000aa;
+    color: white;
+}
+.first-letter {
+    text-decoration: underline;
+}
+.text-area {
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 12px;
+    background-color: #ffffff;
+    color: #000000;
+    padding: 10px 20px;
+    border-top: 1px solid black;
+}
+.text-area a.tumblr_blog {
+    text-decoration: none;
+}
+.font-arial .text-area {
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+}
+.font-comic-sans .text-area {
+    font-family: 'Comic Sans MS', 'Comic Sans', Chalkboard, cursive;
+}
+.font-consolas .text-area {
+    font-family: Consolas, Menlo, monospace;
+}
+.font-georgia .text-area {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.photo .text-area, .video .text-area, .audio .text-area {
+    display: none;
+}
+.photo .text-area.has-caption, .video .text-area.has-caption, .audio .text-area.has-caption {
+    display: block;
+}
+.photo .text-area.has-tags, .video .text-area.has-tags, .audio .text-area.has-tags {
+    display: block;
+}
+.text-area a {
+    color: #000000;
+    text-decoration: underline;
+}
+.text-area a:hover {
+    color: #000000;
+    text-decoration: underline;
+}
+.text-area hr {
+    border: 0;
+    border-top: 1px dotted #000000;
+}
+.text-area img {
+    max-width: 100%;
+    height: auto;
+}
+.text-area iframe {
+    max-width: 100%;
+}
+.text-area blockquote {
+    border-left: 2px solid #000000;
+    margin-left: 2px;
+    padding-left: 8px;
+}
+.quote-text {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
+    font-style: italic;
+}
+.status-bar {
+    padding: 2px;  
+    border-top: 1px solid black;
+    color: #000000;
+    background-color: #ffffff;
+    font-size: 11px;
+    height: 20px;
+}
+.status-bar a {
+    color: #000000;
+}
+
+.media-container {
+    border-top: 1px solid black;
+    background-color: #ffffff;
+    overflow: hidden;
+}
+.photo-post-photo {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.stretch-images .photo-post-photo {
+    width: 500px;
+}
+.stretch-images.layout-two-column .photo-post-photo {
+    width: 400px;
+}
+.stretch-images.layout-three-column .photo-post-photo {
+    width: 275px;
+}
+
+.media-container iframe {
+    display: block;
+    max-width: 100%;
+}
+.layout-two-column .video .media-container iframe {
+    width: 400px;
+    height: 225px;
+}
+.layout-three-column .video .media-container iframe {
+    width: 275px;
+    height: 154px;
+}
+
+.video .media-container iframe.instagram-media {
+    margin: 0 !important;
+}
+
+.layout-two-column .video .media-container iframe.instagram-media {
+    width: 400px;
+    height: 610px;
+}
+.layout-three-column .video .media-container iframe.instagram-media {
+    width: 275px;
+    height: 460px;
+}
+
+.layout-two-column .soundcloud_audio_player {
+    width: 400px;
+    height: 400px;
+}
+.layout-three-column .soundcloud_audio_player {
+    width: 275px;
+    height: 275px;
+}
+
+.layout-two-column .spotify_audio_player {
+    width: 400px;
+    height: 464px;
+}
+.layout-three-column .spotify_audio_player {
+    width: 275px;
+    height: 319px;
+}
+
+.tumblr_video_iframe {
+    max-height: 540px;
+}
+
+ul.chat {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    font-family: Consolas, Menlo, monospace;
+}
+
+.chat-label {
+    font-weight: bold;
+}
+
+a.read_more:after {
+    content: " \2192";
+}
+
+.note-window {
+    max-height: 300px;
+    overflow-y: scroll;
+}
+ol.notes {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+ol.notes li {
+    width: 96px;
+    height: 96px;
+    float: left;
+    text-align: center;
+    margin-top: 12px;
+    padding-left: 6px;
+    padding-right: 6px;
+    overflow: hidden;
+}
+ol.notes .action {
+    display:block;
+    margin-top: 6px;
+    word-wrap: break-word;
+}
+ol.notes .avatar_frame {
+    width: 32px;
+    height: 32px;
+    clear: both;
+}
+ol.notes img {
+    width: 32px;
+    height: 32px;
+    vertical-align: middle;
+}
+ol.notes blockquote {
+    display: none;
+}
+.more_notes_link {
+    display: none;
+}
+
+.pagenav {
+    float: none !important;
+    margin: 0 auto !important;
+    clear: both;
+    min-width: 400px;
+}
+
+.pagination {
+    padding: 10px 0;
+    text-align: center;
+}
+
+.pagenav .window {
+    background-color: #ffffff;
+}
+
+.pagination a, .pagination span {
+    font-size: 12px;
+    color: #000000;
+    padding: 3px 6px;
+}
+.pagination a:hover {
+    color: #ffffff !important;
+    background-color: #0000aa;
+}
+.current-page {
+    color: #ffffff !important;
+    background-color: #0000aa;
+}
+a.tag {
+    opacity: 0.67;
+}
+a.tag:hover {
+    opacity: 1;
+}
+.tag:before {
+    content: "#";
+}
+
+.search-container {
+    width: 100%;
+}
+input.search {
+    border: 1px solid black;
+    background-color: #ffffff;
+    color: #000000;
+    padding: 3px;
+    margin: 2px;
+    width: 124px;
+    font-size: 11px;
+}
+
+/* Hi-DPI stuff */
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.1),
+only screen and (-o-min-device-pixel-ratio: 11/10),
+only screen and (min-resolution: 110dpi) {
+    .window-border {
+        background-image: url('//static.tumblr.com/anzluor/Zn8p2fcyr/win31grip_hidpi.png'), url('//static.tumblr.com/anzluor/Zn8p2fcyr/win31grip_hidpi.png'), url('//static.tumblr.com/anzluor/Zn8p2fcyr/win31grip_hidpi.pngg'), url('//static.tumblr.com/anzluor/Zn8p2fcyr/win31grip_hidpi.png');
+        background-size: 43px 43px, 43px 43px, 43px 43px, 43px 43px;
+    }
+    .title-bar-buttons {
+        background-image: url('//static.tumblr.com/anzluor/vlBp2fdg1/w31_hidpi.png');
+        background-size: 57px 18px;
+    }
+    .title-bar .icon {
+        background-image: url('//static.tumblr.com/anzluor/vlBp2fdg1/w31_hidpi.png');
+        background-size: 57px 18px;
+    }
+}
+
+.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; }
+
+.reblog-avatar {
+    border-radius: 2px;
+    width: 16px;
+    height: 16px;
+    margin-right: 7px;
+    vertical-align: middle;
+}
+.reblog-avatar.deleted {
+    -webkit-filter: grayscale(1);
+    filter: grayscale(1);
+}
+a.reblog-username {
+    color: #000000;
+    text-decoration: none;
+}
+.asker a, .answerer a {
+    color: #000000;
+    text-decoration: none;
+}
+.post-section {
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+.post-section:last-child {
+    border-bottom: 0;
+}
+p.tmblr-attribution {
+    font-size: 11px;
+}
+div.npf_row {
+    max-width: 100%;
+    height: auto !important;
+    display: flex;
+    margin: 0 !important;
+}
+div.npf_row figure.tmblr-full {
+    flex: 1;
+    justify-content: space-between;
+    margin: 0;
+}
+div.npf_row figure.tmblr-full:first-child {
+    padding-right: 2px;
+}
+.npf-link-block a {
+    text-decoration: none !important;
+}
+.post-section figure video, .post-section figure audio {
+    max-width: 100%;
+}
+
+.text-area.related {
+    padding-top: 20px;
+    padding-right: 5px;
+}
+
+.square {
+    background-color: #222;
+    float: left;
+    width: 102px;
+    height: 102px;
+    border-radius: 2px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    background-size: cover;
+    background-position: center center;
+    color: white;
+    font-size: 0.8em;
+    padding: 4px;
+    overflow: hidden;
+}
+
+.related-posts-container a:nth-child(n+9) {
+    display: none;
+}
+
+.related-posts a:hover .square {
+    -webkit-filter: brightness(1.07);
+    filter: brightness(1.07);
+}
+
+
+.title-bar .post-date {
+    display: none;
+}
