--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="mailto:thalia.juarez01@utrgv.edu">email</a></li>
 	        		<li><a href="https://github.com/thaliajuarez">github.com/thaliajuarez</a></li>
 				</ul>
 			</footer>
