--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/sps">SPS</a></li>
 					<li><a href="/notes">Notes</a></li>
-					<li><a href="/project">Project</a></li>
+					<li><a href="/cv">CV</a></li>
 	    		</ul>
 			</nav>
 
