--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ ul.posts li {
     background-repeat: no-repeat;
 }
 body {
-    background-color: #c3c7cb;
+    background-color: #1F326C;
     width: 690px;
     margin: 0 auto;
 }
