--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ p, ul, ol, table {
     color: #333;
 }
 footer {
-    border-top: 1px solid #d5d5d5;
+    border-top: 1px solid #1F326C;
     font-size: .8em;
 }
 
