--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Georgia', 'Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -21,10 +21,10 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Georgia', 'Serif';
 }
 h2, h3 {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Georgia', 'Serif';
 }
 p, ul, ol, table {
     font-size: 1.5em;
