--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 		</head>
 
 		<body style="background-color:#1F326C;">
-
+			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
