--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
+    font-family:'Georgia', 'Serif';
 }
 nav ul, footer ul {
     font-family:'Georgia', 'Serif';
@@ -30,10 +31,12 @@ p, ul, ol, table {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
+    font-family:'Georgia', 'Serif';
 }
 footer {
     border-top: 1px solid #ffffff;
     font-size: .8em;
+    font-family:'Georgia', 'Serif';
 }
 
 ul.posts { 
