--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ nav ul, footer ul {
     font-family:'Georgia', 'Serif';
     padding: 0px;
     list-style: none;
-    font-weight: bold;
+    font-weight: normal;
 }
 nav ul li, footer ul li {
     display: inline;
