--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #ffffff;
+    color: #e9e9e9;
 }
 a:hover {
     color: #1F326C;
@@ -37,7 +37,7 @@ p, ul, ol, table {
 }
 footer {
     border-top: 1px solid #ffffff;
-    font-size: .8em;
+    font-size: .6em;
     font-family:'Georgia', 'Serif';
 }
 
