--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 
-		<body style="background-color:white;">
+		<body style="background-color:rgb(0, 0, 0);">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<nav>
 	    		<ul>
