--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ a {
     color: #e9e9e9;
 }
 a:hover {
-    color: rgb(0, 255, 64);
+    color: rgb(83, 71, 194);
 }
 h1 {
     font-size: 3em;
@@ -34,6 +34,10 @@ p, ul, ol, table {
     line-height: 1.4em;
     color: #ffffff;
     font-family:'Georgia', 'Serif';
+}
+code {
+    font-family: monospace;
+    color: rgb(0, 255, 64);
 }
 footer {
     border-top: 1px solid #ffffff;
