--- a/css/main.css
+++ b/css/main.css
@@ -45,12 +45,20 @@ footer {
     font-size: .6em;
     font-family:'Georgia', 'Serif';
 }
-
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
 }
-
 ul.posts li {
     list-style: none;
+}
+.nav {
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left:0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
 }
