--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
 
 		<body style="background-color:rgb(0, 0, 0);">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<nav>
+			<!-- Side navigation -->
+			<!--<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
@@ -18,7 +19,17 @@
 					<li><a href="/notes">Notes</a></li>
 					<li><a href="/cv">CV</a></li>
 	    		</ul>
-			</nav>
+			</nav> -->
+
+			<div class="sidenav">
+				<ul>
+					<li><a href="/">Home</a></li>
+					<li><a href="/about">About</a></li>
+					<li><a href="/sps">SPS</a></li>
+					<li><a href="/notes">Notes</a></li>
+					<li><a href="/cv">CV</a></li>
+				</ul>
+ 			</div>
 
 			<div class="container">
 			
