--- a/css/main.css
+++ b/css/main.css
@@ -52,3 +52,39 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  
+  .sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 1.0em;
+    line-height: 1.4em;
+    color: #ffffff;
+    font-family:'Georgia', 'Serif';
+    display: block;
+  }
+  
+  .sidenav a:hover {
+    color: rgb(56, 81, 218);
+  }
+  
+  .main {
+    margin-left: 160px; /* Same as the width of the sidenav */
+    font-size: 28px; /* Increased text to enable scrolling */
+    padding: 0px 10px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
