--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,11 @@
 			<div class="container">
 				<div class="sidenav">
 					<ul>
-						<li><a href="/">Home</a></li>
-						<li><a href="/about">About</a></li>
-						<li><a href="/sps">SPS</a></li>
-						<li><a href="/notes">Notes</a></li>
-						<li><a href="/cv">CV</a></li>
+						<a href="/">Home</a>
+						<a href="/about">About</a>
+						<a href="/sps">SPS</a>
+						<a href="/notes">Notes</a>
+						<a href="/cv">CV</a>
 					</ul>
 				 </div>
 			
