--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ ul.posts li {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color:rgb(0, 0, 0);
     overflow-x: hidden;
     padding-top: 20px;
   }
