--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,26 +10,16 @@
 
 		<body style="background-color:rgb(0, 0, 0);">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		
-			<!--<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/sps">SPS</a></li>
-					<li><a href="/notes">Notes</a></li>
-					<li><a href="/cv">CV</a></li>
-	    		</ul>
-			</nav> -->
 
 			<div class="container">
 				<!-- Side navigation -->
-				<div class="sidenav">
+				<div class="sidebar">
 					<ul>
-						<a href="/">Home</a>
-						<a href="/about">About</a>
-						<a href="/sps">SPS</a>
-						<a href="/notes">Notes</a>
-						<a href="/cv">CV</a>
+						<a class="active" href="#/">Home</a>
+						<a href="#/about">About</a>
+						<a href="#/sps">SPS</a>
+						<a href="#/notes">Notes</a>
+						<a href="#/cv">CV</a>
 					</ul>
 				 </div>
 			
