--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ ul.posts li {
         float: left;
         font-size: 18px;
     }
-    div.container {margin-left: 0;}
+    div.container {margin-left: auto;}
 }
 /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
 @media screen and (max-width: 400px) {
