--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,10 @@ ul.posts li {
 .sidenav a:hover:not(.active) {
     color: white;
 }
+.main {
+    margin-left: 160px; /* Same as the width of the sidebar */
+    padding: 0px 10px;
+  }
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-height: 450px) {
     .sidebar {
