--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
 				<!-- Side navigation -->
 				<div class="sidebar">
 					<ul>
-						<a class="active" href="#">Home</a>
-						<a href="#about">About</a>
-						<a href="#sps">SPS</a>
-						<a href="#notes">Notes</a>
-						<a href="#cv">CV</a>
+						<a class="active" href="/">Home</a>
+						<a href="/about">About</a>
+						<a href="/sps">SPS</a>
+						<a href="/notes">Notes</a>
+						<a href="/cv">CV</a>
 					</ul>
 				 </div>
 			
