--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,11 @@ ul.posts li {
     margin-left: 160px; /* Same as the width of the sidebar */
     padding: 0px 10px;
   }
+  div.content {
+      margin-left: 200px;
+      padding: 1px 16px;
+      height: 1000px;
+  }
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-height: 450px) {
     .sidebar {
@@ -89,7 +94,7 @@ ul.posts li {
         float: left;
         font-size: 18px;
     }
-    div.container {margin-left: auto;}
+    div.content {margin-left: 0;}
 }
 /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
 @media screen and (max-width: 400px) {
