--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,11 @@
 			
 			</div><!-- /.container -->
 
-			{{ content }}
+			<div class="content">
+
+				{{ content }}
+				
+			</div>
 
 			<footer>
 	    		<ul>
