--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ ul.posts li {
     margin: 0;
     padding: 0;
     height: 100%;
-    width: 100px;
+    width: 80px;
     position: fixed;
     background-color:rgb(0, 0, 0);
     overflow: auto;
@@ -75,10 +75,10 @@ ul.posts li {
     color: rgb(56, 81, 218);
 }
 div.content {
-      margin-left: 100px;
+      margin-left: 80px;
       padding: 1px 16px;
       height: 1000px;
-      position:relative;
+     /* position:relative; */
   }
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-height: 450px) {
@@ -89,7 +89,7 @@ div.content {
     }
     .sidebar a {
         float: left;
-        font-size: 18px;
+        font-size: 1.0em;
     }
     div.content {margin-left: 0;}
 }
