--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 	<html>
+		<!-- import google fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu&display=swap" rel="stylesheet">
 
 		<head>
 			<title>{{ page.title }}</title>
@@ -35,7 +37,7 @@
 						<li><a href="https://github.com/thaliajuarez">github.com/thaliajuarez</a></li>
 					</ul>
 				</footer>
-				
+
 			</div>
 
 		</body>
