--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 body {
     margin: 60px auto;
     width: 70%;
-    font-family:'Georgia', 'Serif';
+    font-family: 'Ubuntu', sans-serif;
 }
 nav ul, footer ul {
-    font-family:'Georgia', 'Serif';
+    font-family: 'Open Sans', sans-serif;
     padding: 0px;
     list-style: none;
     font-weight: normal;
@@ -22,18 +22,18 @@ a:hover {
 }
 h1 {
     font-size: 2em;
-    font-family:'Georgia', 'Serif';
+    font-family: 'Ubuntu', sans-serif;
     color: #ffffff;
 }
 h2, h3 {
-    font-family:'Georgia', 'Serif';
+    font-family: 'Ubuntu', sans-serif;
     color: #ffffff;
 }
 p, ul, ol, table {
     font-size: 1.2em;
     line-height: 1.4em;
     color: #ffffff;
-    font-family:'Georgia', 'Serif';
+    font-family: 'Open Sans', sans-serif;
 }
 code {
     font-family: monospace;
@@ -67,7 +67,7 @@ ul.posts li {
     font-size: 1.0em;
     line-height: 1.4em;
     color: #ffffff;
-    font-family:'Georgia', 'Serif';
+    font-family: 'Open Sans', sans-serif;
     display: block;
 }
 .sidebar a:hover {
