--- a/css/main.css
+++ b/css/main.css
@@ -44,21 +44,24 @@ img {
     max-width:100%;
     max-height:100%  
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 .auto-resize-portrait {
     height: 80px;
     width: 50px;
-}
-    
+}   
 .auto-resize-landscape {
     height: 30px;
     width: 80px;
-}
-    
+}   
 .auto-resize-square {
     height: 75px;
     width: 75px;
 }
-    
 .auto-resize-big {
     width:150px;
     height:150px;
