--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,13 @@ nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: normal;
+    margin-bottom: 0px;
+    position: fixed;
 }
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+    position: fixed;
 }
 a {
     text-decoration: none;
