--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -15,7 +15,7 @@
     />
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/sps.css" />
 
     <!-- import google fonts -->
     <link
