--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Google DSC at UTRGV</title>
+    <title>SPS at UTRGV</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -28,55 +28,23 @@
   </head>
   <body class="container">
     <div class="row profile">
-      <img
-        id="logo"
-        src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fdsc-logo.png?v=1586379511200"
-      />
+
       <div class="col">
         <h1>
-          @dscutrgv
+          @sps
         </h1>
         <p>
-          DSC-UTRGV is a program powered by @googledevs for university students
-          to expand their technical skills and solve problems in their
-          community.
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+          Numquam accusamus, ullam quaerat dolore tenetur laboriosam 
+          in quis debitis quae labore quasi molestiae, suscipit vitae 
+          et fugit! Officiis, iste autem! Voluptatem.
         </p>
         <button type="button" class="btn btn-primary">Follow</button>
       </div>
     </div>
     <div class="grid">
       <div class="row">
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-1.png?v=1586370157854"
-        />
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-6.png?v=1586370192402"
-        />
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-3.png?v=1586370174113"
-        />
-      </div>
-      <div class="row">
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-5.png?v=1586370182741"
-        />
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-4.png?v=1586370177888"
-        />
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-7.png?v=1586370199446"
-        />
-      </div>
-      <div class="row">
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-8.png?v=1586370202250"
-        />
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-9.png?v=1586370207591"
-        />
-        <img
-          src="https://cdn.glitch.com/4fd47036-8047-4055-8e09-6db77f323e5d%2Fgrid-2.png?v=1586370169859"
-        />
+   
       </div>
     </div>
   </body>
