--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -38,16 +38,16 @@
           @sps
         </h1>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-          Numquam accusamus, ullam quaerat dolore tenetur laboriosam 
-          in quis debitis quae labore quasi molestiae, suscipit vitae 
-          et fugit! Officiis, iste autem! Voluptatem.
-        </p>
+        <ul>
+            <li><a href="/sps/members">Members</a></li>
+            <li><a href="/sps/outreach">Outreach</a></li>
+            <li><a href="/sps/photos">Photos</a></li>
+            <li><a href="/sps/demos">Demos</a></li>
+        </ul>
 
         <button type="button" class="btn btn-primary">Follow</button>
 
-      </div>
+    </div>
 
     </div>
 
