--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/sps.css" />
 
     <!-- import google fonts -->
     <link
