--- a/css/sps.css
+++ b/css/sps.css
@@ -15,7 +15,32 @@ body {
     width:250px;
     margin: 5px;
   }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
   
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
+
   .grid {
     margin-left:200px;
     margin-bottom:100px;
