--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -38,12 +38,20 @@
           @sps
         </h1>
 
-        <ul>
-            <li><a href="/sps/members">Members</a></li>
-            <li><a href="/sps/outreach">Outreach</a></li>
-            <li><a href="/sps/photos">Photos</a></li>
-            <li><a href="/sps/demos">Demos</a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/sps/members">Members <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="/sps/outreach">Outreach </a>
+                <a class="nav-item nav-link" href="/sps/photos">Photos </a>
+                <a class="nav-item nav-link disabled" href="/sps/demos">Demos </a>
+              </div>
+            </div>
+          </nav>
 
         <button type="button" class="btn btn-primary">Follow</button>
 
