--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -34,12 +34,8 @@
 
       <div class="col">
 
-        <h1>
-          @sps
-        </h1>
-
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">@sps</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -52,9 +48,7 @@
               </div>
             </div>
           </nav>
-
-        <button type="button" class="btn btn-primary">Follow</button>
-
+          
     </div>
 
     </div>
