--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -31,9 +31,8 @@
   <body class="container">
 
     <div class="row profile">
-
       <div class="col">
-
+        <h1> Society of Physics Students - Edinburg, TX </h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">@sps</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,9 +47,7 @@
               </div>
             </div>
           </nav>
-          
     </div>
-
     </div>
 
     {{ content }}
