--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -34,7 +34,7 @@
       <div class="col">
         <h1> Society of Physics Students - Edinburg, TX </h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">@sps</a>
+            <a class="navbar-brand" href="/sps">@sps</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
