--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -43,7 +43,7 @@
                 <a class="nav-item nav-link active" href="/sps/members">Members <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="/sps/outreach">Outreach </a>
                 <a class="nav-item nav-link" href="/sps/photos">Photos </a>
-                <a class="nav-item nav-link disabled" href="/sps/demos">Demos </a>
+                <a class="nav-item nav-link" href="/sps/demos">Demos </a>
               </div>
             </div>
           </nav>
