--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -41,9 +41,9 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="/sps/members">Members <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="/sps/outreach">Outreach </a>
-                <a class="nav-item nav-link active" href="/sps/photos">Photos </a>
-                <a class="nav-item nav-link active" href="/sps/demos">Demos </a>
+                <a class="nav-item nav-link active" href="/sps/outreach">Outreach <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="/sps/photos">Photos <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="/sps/demos">Demos <span class="sr-only">(current)</span></a>
               </div>
             </div>
           </nav>
