--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 					<ul>
 						<a href="/">Home</a>
 						<a href="/about">About</a>
-						<a href="/sps">SPS</a>
+						<a href="/sps" target="_blank" rel="noopener noreferrer">SPS</a>
 						<a href="/notes">Notes</a>
 						<a href="/cv">CV</a>
 					</ul>
