--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -37,13 +37,25 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/sps/members">Members <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="/sps/outreach">Outreach <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="/sps/photos">Photos <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="/sps/demos">Demos <span class="sr-only">(current)</span></a>
-              </div>
+              <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/sps/members">Members <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="/sps/outreach">Outreach <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="/sps/photos">Photos <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="/sps/demos">Demos <span class="sr-only">(current)</span></a>
+                </li>
+              </ul>
             </div>
+            <a class="nav-item nav-link active" href="/sps/members">Members <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="/sps/outreach">Outreach <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="/sps/photos">Photos <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="/sps/demos">Demos <span class="sr-only">(current)</span></a>
           </nav>
     </div>
     </div>
