--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/sps/members">Members <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/sps/members">Malsdfjembers <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/sps/outreach">Outreach <span class="sr-only">(current)</span></a>
