--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,12 @@ nav ul, footer ul {
     list-style: none;
     font-weight: normal;
     margin-bottom: 0px;
-    position: fixed;
+    position: relative;
 }
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
-    position: fixed;
+    position: relative;
 }
 a {
     text-decoration: none;
