--- a/_layouts/sps.html
+++ b/_layouts/sps.html
@@ -33,10 +33,10 @@
       <div class="col">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/sps">@sps</a>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        
               <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/sps/members">Malsdfjembers <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/sps/members">Members <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/sps/outreach">Outreach <span class="sr-only">(current)</span></a>
@@ -48,8 +48,8 @@
                   <a class="nav-link" href="/sps/demos">Demos <span class="sr-only">(current)</span></a>
                 </li>
               </ul>
-            </div>
-            <a class="nav-item nav-link active" href="/sps/members">Members <span class="sr-only">(current)</span></a>
+            
+            <a class="nav-item nav-link active" href="/sps/members">Members2 <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="/sps/outreach">Outreach <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="/sps/photos">Photos <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="/sps/demos">Demos <span class="sr-only">(current)</span></a>
