--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,13 @@ body {
     height:150px;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 @media (max-width: 712px) {
   img {
       height:150px;
