--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ nav ul li, footer ul li {
     position: relative;
 }
 a {
-    text-decoration: none;
+    text-decoration: underline;
     color: #e9e9e9;
 }
 a:hover {
