--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 						<a href="/about">About</a>
 						<a href="/sps" target="_blank" rel="noopener noreferrer">SPS</a>
 						<a href="/notes">Notes</a>
-						<a href="/cv">CV</a>
+						<a href="/courses">Courses</a>
 					</ul>
 				 </div>
 
