--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
 						<a href="/sps" target="_blank" rel="noopener noreferrer">SPS</a>
 						<a href="/notes">Notes</a>
 						<a href="/courses">Courses</a>
+						<a href="/punch_in">Punch In</a>
 					</ul>
 				 </div>
 
